fixed flex issues for left, aligned left/right, added styling to logo

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@ body{
     display: flex;
     min-height: 100vh;
     min-width: 100vw;
-    border: 2px solid black;
+    margin: 0;
 }
 
 .left{
@@ -10,21 +10,44 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
-    border: 2px solid black;
     flex-direction: column;
-    flex-grow: 1;
+    flex-basis: 45%;
+    width: 45%;
     justify-content: space-between;
 }
 
-.logo{
+.logoText{
     display: flex;
-    border: 2px solid black;
     justify-content: center;
+    background-color: rgba(255, 255, 255, 0.178);
+}
+
+#logo{
+    display: flex;
+    height: auto;
+    width: 25%;
+}
+
+.blankOne{
+    display: flex;
+    flex-grow: 1;
+}
+
+.blankTwo{
+    display: flex;
+    flex-grow: 4;
+}
+
+#text{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 75px;
+    color: rgb(88, 50, 6);
 }
 
 .credit{
     display: flex;
-    border: 2px solid black;
     justify-content: center;
     color: white;
 }
@@ -37,13 +60,21 @@ a.link{
     display: flex;
     border: 2px solid black;
     flex-direction: column;
-    flex-grow: 2
+    flex-grow: 2;
+    width: 55%;
 }
 
 .tagText{
     display: flex;
     border: 2px solid black;
-    flex-grow: 1
+    flex-grow: 1;
+    flex-direction: column;
+    justify-content: center;
+    padding: 20px;
+}
+
+.tagContent{
+    text-wrap: wrap;
 }
 
 .form{
